syntax = "proto3";
package Classlink;
option java_package = "com.classlink.websocket.api.lobby.domain.param.proto";
option java_outer_classname = "LobbyInstitutionClassTeacherListProto";

message LobbyInstitutionClassTeacherListReq{
  string InsCode = 1;
  string TarIdentityType = 2;
}